displays pet name on page after user input

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Tamagotchi</h1>
+    <p class="pet-name">My pet's name is <span id="pet-name">[pet name]</span></p>
     <img src="./img/pet.png" id="pet-image" alt="Your Pet">
     <table>
         <tr>
